force-app/main/default/objects/Account/fields/Abuse__c.field-meta.xml
<CustomField>
    <fullName>Abuse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abuse</label>
    <type>Checkbox</type>
</CustomField>