force-app/main/default/objects/Account/fields/Baby_Baby_Items__c.field-meta.xml
<CustomField>
    <fullName>Baby_Baby_Items__c</fullName>
    <label>Baby &amp; Baby Items</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baby</fullName>
            </value>
            <value>
                <fullName>Baby Gear &amp; Essentials</fullName>
            </value>
            <value>
                <fullName>Nursury &amp; Feeding</fullName>
            </value>
            <value>
                <fullName>Pregnancy &amp; Parenting</fullName>
            </value>
            <value>
                <fullName>Safety, Health &amp; Wellness</fullName>
            </value>
            <value>
                <fullName>Toys &amp; Activities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>