force-app/main/default/objects/Account/fields/Boys_in_Household__c.field-meta.xml
<CustomField>
    <fullName>Boys_in_Household__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boys in Household</label>
    <type>Checkbox</type>
</CustomField>