force-app/main/default/objects/Account/fields/BRU_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>BRU_Opt_Out_Date__c</fullName>
    <label>BRU Opt Out Date</label>
    <type>DateTime</type>
</CustomField>