force-app/main/default/objects/Account/fields/Child_Birthday_Email_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Child_Birthday_Email_Opt_In_Date__c</fullName>
    <label>Child Birthday Email Opt In Date</label>
    <type>Date</type>
</CustomField>