force-app/main/default/objects/Account/fields/Child_Birthday_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Child_Birthday_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Birthday Opt In</label>
    <type>Checkbox</type>
</CustomField>