force-app/main/default/objects/Account/fields/Child_Birthday_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Child_Birthday_Opt_Out_Date__c</fullName>
    <label>Child Birthday Opt Out Date</label>
    <type>DateTime</type>
</CustomField>