force-app/main/default/objects/Account/fields/Children_Count__c.field-meta.xml
<CustomField>
    <fullName>Children_Count__c</fullName>
    <label>Children Count</label>
    <summaryForeignKey>Child__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>