force-app/main/default/objects/Account/fields/Consent_Needed__c.field-meta.xml
<CustomField>
    <fullName>Consent_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used during YM Dataload. These subscribers should be included in an opt-in campaign for Loyalty Purposes.</description>
    <inlineHelpText>Used during YM Dataload. These subscribers should be included in an opt-in campaign for Loyalty Purposes.</inlineHelpText>
    <label>Consent Needed</label>
    <type>Checkbox</type>
</CustomField>