force-app/main/default/objects/Account/fields/Duplicate_BR__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_BR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate BR</label>
    <type>Checkbox</type>
</CustomField>