force-app/main/default/objects/Account/fields/Email_Opt_In_BRU_Source__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In_BRU_Source__c</fullName>
    <label>Email Opt In BRU Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opt_In_Source</valueSetName>
    </valueSet>
</CustomField>