force-app/main/default/objects/Account/fields/Email_Opt_In_Date_BRU__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In_Date_BRU__c</fullName>
    <description>The date the Account opted in to BRU weekly marketing emails.</description>
    <label>Email Opt In Date BRU</label>
    <type>Date</type>
</CustomField>