force-app/main/default/objects/Account/fields/Email_Opt_In_Date_RLE__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In_Date_RLE__c</fullName>
    <label>Email Opt In Date RLE</label>
    <type>Date</type>
</CustomField>