force-app/main/default/objects/Account/fields/Email_Opt_In_Date_TRU__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In_Date_TRU__c</fullName>
    <description>The date the account opted in to TRU weekly marketing emails.</description>
    <label>Email Opt In Date TRU</label>
    <type>Date</type>
</CustomField>