force-app/main/default/objects/Account/fields/Email_Opt_In_RLE__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In_RLE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clothing</label>
    <type>Checkbox</type>
</CustomField>