force-app/main/default/objects/Account/fields/Email_Opt_In_TRU__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In_TRU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether an account has opted in to Toys R Us weekly marketing emails.  Initially loaded from YM, then linked to preference center.</description>
    <label>Toys</label>
    <type>Checkbox</type>
</CustomField>