force-app/main/default/objects/Account/fields/Events_Activities__c.field-meta.xml
<CustomField>
    <fullName>Events_Activities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Events &amp; Activities</label>
    <type>Checkbox</type>
</CustomField>