force-app/main/default/objects/Account/fields/Freq_All_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Freq_All_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freq All Opt In</label>
    <type>Checkbox</type>
</CustomField>