force-app/main/default/objects/Account/fields/Freq_All_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Freq_All_Opt_In_Date__c</fullName>
    <label>Freq All Opt In Date</label>
    <type>Date</type>
</CustomField>