force-app/main/default/objects/Account/fields/Freq_Deals_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Freq_Deals_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freq Deals Opt In</label>
    <type>Checkbox</type>
</CustomField>