force-app/main/default/objects/Account/fields/Freq_Deals_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Freq_Deals_Opt_In_Date__c</fullName>
    <label>Freq Deals Opt In Date</label>
    <type>Date</type>
</CustomField>