force-app/main/default/objects/Account/fields/Girls_in_Household__c.field-meta.xml
<CustomField>
    <fullName>Girls_in_Household__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Girls in Household</label>
    <type>Checkbox</type>
</CustomField>