force-app/main/default/objects/Account/fields/Global_Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Global_Email_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to store whether the customer opted in to receive global emails across all brands</description>
    <label>Global Email Opt In</label>
    <type>Checkbox</type>
</CustomField>