force-app/main/default/objects/Account/fields/Global_Email_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Global_Email_Opt_In_Date__c</fullName>
    <description>This field is used to store the customer&apos;s date at which he/she signed up for emails globally across all banners</description>
    <label>Global Email Opt In Date</label>
    <type>Date</type>
</CustomField>