force-app/main/default/objects/Account/fields/Global_Email_Opt_In_Source__c.field-meta.xml
<CustomField>
    <fullName>Global_Email_Opt_In_Source__c</fullName>
    <description>This field is used to store the picklist values associated to the different entry sources from the ToysRUs website</description>
    <label>Global Email Opt In Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opt_In_Source</valueSetName>
    </valueSet>
</CustomField>