force-app/main/default/objects/Account/fields/Holiday_Shopper__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Shopper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Holiday Shopper</label>
    <type>Checkbox</type>
</CustomField>