force-app/main/default/objects/Account/fields/Household_Child_Count__c.field-meta.xml
<CustomField>
    <fullName>Household_Child_Count__c</fullName>
    <label>Household Child Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>