force-app/main/default/objects/Account/fields/Implied_Consent_Active__c.field-meta.xml
<CustomField>
    <fullName>Implied_Consent_Active__c</fullName>
    <formula>not(isblank( R_Club_Number__c ))
&amp;&amp;
not(isblank( R_Club_Join_Date__c ))
&amp;&amp;
(Loyalty_Opt_In__c)
&amp;&amp;
isblank(Loyalty_Opt_Out_Date__c)
&amp;&amp;
isblank(Loyalty_Opt_In_Date__c)
&amp;&amp;
(R_Club_Join_Date__c&gt;today()-730)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implied Consent Active</label>
    <type>Checkbox</type>
</CustomField>