force-app/main/default/objects/Account/fields/Implied_Consent_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Implied_Consent_End_Date__c</fullName>
    <formula>if(Implied_Consent_Active__c=TRUE, R_Club_Join_Date__c + 730, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implied Consent End Date</label>
    <type>Date</type>
</CustomField>