force-app/main/default/objects/Account/fields/Indian_Status__c.field-meta.xml
<CustomField>
    <fullName>Indian_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Native Status</label>
    <type>Checkbox</type>
</CustomField>