force-app/main/default/objects/Account/fields/Is_Default_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify if the Person Account is the &apos;Default&apos; Account associated with the Service Cloud connector integration</description>
    <label>Is Default Account?</label>
    <type>Checkbox</type>
</CustomField>