force-app/main/default/objects/Account/fields/Language_Preference__c.field-meta.xml
<CustomField>
    <fullName>Language_Preference__c</fullName>
    <label>Language Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EN</fullName>
                <default>true</default>
                <label>EN</label>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>