force-app/main/default/objects/Account/fields/Last_Email_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Activity_Date__c</fullName>
    <description>Latest sent marketing email.  Initially loaded from YM data.</description>
    <label>Last Email Activity Date</label>
    <type>Date</type>
</CustomField>