force-app/main/default/objects/Account/fields/Loyalty_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Change_Date__c</fullName>
    <label>Loyalty Change Date</label>
    <type>Date</type>
</CustomField>