force-app/main/default/objects/Account/fields/Loyalty_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loyalty Opt In</label>
    <type>Checkbox</type>
</CustomField>