force-app/main/default/objects/Account/fields/Loyalty_Opt_In_Type__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Opt_In_Type__c</fullName>
    <label>Loyalty Opt In Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>