force-app/main/default/objects/Account/fields/Loyalty_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Opt_Out_Date__c</fullName>
    <label>Loyalty Opt Out Date</label>
    <type>DateTime</type>
</CustomField>