force-app/main/default/objects/Account/fields/Mailing_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Line_2__c</fullName>
    <label>Mailing Address Line 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>