force-app/main/default/objects/Account/fields/Master_Account__c.field-meta.xml
<CustomField>
    <fullName>Master_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>