force-app/main/default/objects/Account/fields/OnContactExternalID__c.field-meta.xml
<CustomField>
    <fullName>OnContactExternalID__c</fullName>
    <externalId>true</externalId>
    <label>OnContactExternalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>