force-app/main/default/objects/Account/fields/Party_Gift_giving__c.field-meta.xml
<CustomField>
    <fullName>Party_Gift_giving__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Party &amp; Gift-giving</label>
    <type>Checkbox</type>
</CustomField>