force-app/main/default/objects/Account/fields/Person_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Person_Contact_ID__c</fullName>
    <formula>CASESAFEID(PersonContactId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Contact ID</label>
    <type>Text</type>
</CustomField>