force-app/main/default/objects/Account/fields/PhoneKey__c.field-meta.xml
<CustomField>
    <fullName>PhoneKey__c</fullName>
    <externalId>true</externalId>
    <label>PhoneKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>