force-app/main/default/objects/Account/fields/Primary_R_Club_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_R_Club_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The main R-Club Number record associated with this account.</description>
    <inlineHelpText>The main R-Club Number record associated with this account.</inlineHelpText>
    <label>Primary R-Club Number</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>R_Club_Number__c.Account__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>R_Club_Number__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>