force-app/main/default/objects/Account/fields/Product_Affinity__c.field-meta.xml
<CustomField>
    <fullName>Product_Affinity__c</fullName>
    <label>Product Affinity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>