force-app/main/default/objects/Account/fields/R_Club_Join_Date__c.field-meta.xml
<CustomField>
    <fullName>R_Club_Join_Date__c</fullName>
    <description>This signifies the date that a customer joined the R-Club rewards program.</description>
    <label>R-Club Join Date</label>
    <type>Date</type>
</CustomField>