force-app/main/default/objects/Account/fields/R_Club_Number__c.field-meta.xml
<CustomField>
    <fullName>R_Club_Number__c</fullName>
    <description>Rewards number issued by Toys R Us.</description>
    <label>R-Club Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>