force-app/main/default/objects/Account/fields/R_Club_Source__c.field-meta.xml
<CustomField>
    <fullName>R_Club_Source__c</fullName>
    <formula>if(
(begins( R_Club_Number__c ,&apos;63311&apos;)||begins(R_Club_Number__c ,&apos;63312&apos;)),
&apos;In Store&apos;,
if(
(begins( R_Club_Number__c ,&apos;63313&apos;)||begins(R_Club_Number__c ,&apos;63314&apos;)),
&apos;Online&apos;,
&apos;&apos;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R Club Source</label>
    <type>Text</type>
</CustomField>