force-app/main/default/objects/Account/fields/Radial_Import__c.field-meta.xml
<CustomField>
    <fullName>Radial_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this record was imported from the legacy Radial system</description>
    <inlineHelpText>Whether this record was imported from the legacy Radial system</inlineHelpText>
    <label>Radial Import</label>
    <type>Checkbox</type>
</CustomField>