force-app/main/default/objects/Account/fields/Re_Send_Card__c.field-meta.xml
<CustomField>
    <fullName>Re_Send_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to denote Accounts who were manually provided a new R Club Number in November 2019.  These new numbers remedied missing numbers and duplicate numbers.</description>
    <label>Re-Send Card</label>
    <type>Checkbox</type>
</CustomField>