force-app/main/default/objects/Account/fields/Registry_Number__c.field-meta.xml
<CustomField>
    <fullName>Registry_Number__c</fullName>
    <description>TRU Baby Registry Number</description>
    <label>Registry Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>