force-app/main/default/objects/Account/fields/Registry_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Registry_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registry Created</label>
    <type>Checkbox</type>
</CustomField>