force-app/main/default/objects/Account/fields/Registry_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Registry_Opt_In_Date__c</fullName>
    <label>Registry Create Date</label>
    <type>Date</type>
</CustomField>