force-app/main/default/objects/Account/fields/Safety_Health_Wellness__c.field-meta.xml
<CustomField>
    <fullName>Safety_Health_Wellness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safety, Health &amp; Wellness</label>
    <type>Checkbox</type>
</CustomField>