force-app/main/default/objects/Account/fields/Safety_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Safety_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safety Opt In</label>
    <type>Checkbox</type>
</CustomField>