force-app/main/default/objects/Account/fields/Safety_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Safety_Opt_In_Date__c</fullName>
    <label>Safety Opt In Date</label>
    <type>Date</type>
</CustomField>