force-app/main/default/objects/Account/fields/SCCActive__c.field-meta.xml
<CustomField>
    <fullName>SCCActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used in the Salesforce Connector code</description>
    <inlineHelpText>If this is unchecked the customers online account has been disabled</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>