force-app/main/default/objects/Account/fields/SFCC_Last_Login_Time__c.field-meta.xml
<CustomField>
    <fullName>SFCC_Last_Login_Time__c</fullName>
    <description>This field will store the last login time of the customer from CC</description>
    <label>Last Login Time</label>
    <type>DateTime</type>
</CustomField>