force-app/main/default/objects/Account/fields/SFCC_Last_Visit_Time__c.field-meta.xml
<CustomField>
    <fullName>SFCC_Last_Visit_Time__c</fullName>
    <description>This field will store the last visit time of the customer from CC</description>
    <label>Last Visit Time</label>
    <type>DateTime</type>
</CustomField>