force-app/main/default/objects/Account/fields/SFCC_update__c.field-meta.xml
<CustomField>
    <fullName>SFCC_update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SFCC update</label>
    <type>Checkbox</type>
</CustomField>