force-app/main/default/objects/Account/fields/Special_Attention__c.field-meta.xml
<CustomField>
    <fullName>Special_Attention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Attention</label>
    <type>Checkbox</type>
</CustomField>