force-app/main/default/objects/Account/fields/Spend_Decile_12_Month__c.field-meta.xml
<CustomField>
    <fullName>Spend_Decile_12_Month__c</fullName>
    <label>Spend Decile 12 Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>