force-app/main/default/objects/Account/fields/Spend_Group_12_Month__c.field-meta.xml
<CustomField>
    <fullName>Spend_Group_12_Month__c</fullName>
    <label>Spend Group 12 Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>