force-app/main/default/objects/Account/fields/Total_Visits__c.field-meta.xml
<CustomField>
    <fullName>Total_Visits__c</fullName>
    <label>Total Visits</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>