force-app/main/default/objects/Account/fields/Toys_Toys_Items__c.field-meta.xml
<CustomField>
    <fullName>Toys_Toys_Items__c</fullName>
    <label>Toys &amp; Toys Items</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Toys</fullName>
            </value>
            <value>
                <fullName>Active Play &amp; Outdoor</fullName>
            </value>
            <value>
                <fullName>Books</fullName>
            </value>
            <value>
                <fullName>Collectors - Grownups</fullName>
            </value>
            <value>
                <fullName>Collectors - Kids</fullName>
            </value>
            <value>
                <fullName>Education &amp; Learning Toys Games</fullName>
            </value>
            <value>
                <fullName>Preschool Playtime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>