force-app/main/default/objects/Account/fields/TRU_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>TRU_Opt_Out_Date__c</fullName>
    <label>TRU Opt Out Date</label>
    <type>DateTime</type>
</CustomField>