force-app/main/default/objects/Account/fields/Updated_Source__c.field-meta.xml
<CustomField>
    <fullName>Updated_Source__c</fullName>
    <label>Updated Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>