force-app/main/default/objects/Account/fields/Wishlist_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Wishlist_Create_Date__c</fullName>
    <label>Wishlist Create Date</label>
    <type>Date</type>
</CustomField>