force-app/main/default/objects/Account/fields/Wishlist_Created__c.field-meta.xml
<CustomField>
    <fullName>Wishlist_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wishlist Created</label>
    <type>Checkbox</type>
</CustomField>