force-app/main/default/objects/Account/fields/YM_Household_ID__c.field-meta.xml
<CustomField>
    <fullName>YM_Household_ID__c</fullName>
    <label>YM Household ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>