force-app/main/default/objects/Account/fields/YM_Id__c.field-meta.xml
<CustomField>
    <fullName>YM_Id__c</fullName>
    <description>Unique Identifier for YM database.  Used in Marketing Cloud to enable syncing with YM.</description>
    <externalId>true</externalId>
    <label>YM Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>