force-app/main/default/objects/Account/validationRules/Default_Account_cannot_be_renamed.validationRule-meta.xml
<ValidationRule>
    <fullName>Default_Account_cannot_be_renamed</fullName>
    <active>true</active>
    <description>Prevents Default account from being renamed as this is the restricted Default Account for Commerce Cloud Orders</description>
    <errorConditionFormula>ISCHANGED(LastName) &amp;&amp; Is_Default_Account__c</errorConditionFormula>
    <errorMessage>You cannot rename this account as this is the restricted Default Account for Commerce Cloud Orders</errorMessage>
</ValidationRule>