force-app/main/default/objects/Account/listViews/R_Club_Registrations.listView-meta.xml
<ListView>
    <fullName>R_Club_Registrations</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>SFCC_Customer_Id__pc</columns>
    <columns>R_Club_Number__c</columns>
    <columns>R_Club_Join_Date__c</columns>
    <columns>R_Club_Source__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>guest</value>
    </filters>
    <label>R-Club Registrations</label>
</ListView>