force-app/main/default/objects/Account/listViews/SCC_Customers.listView-meta.xml
<ListView>
    <fullName>SCC_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>SFCC_Customer_Number__pc</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>9/14/2019 12:00 AM</value>
    </filters>
    <filters>
        <field>Person_Contact_ID__c</field>
        <operation>equals</operation>
        <value>0011U00001kKcNSQA0</value>
    </filters>
    <label>SCC Customers</label>
</ListView>